--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 run-1/
 run-2/
+run-3/
+run-4/
+run-5/
+run-6/
+run-7/
+run-8/
+run-9/
+run-10/
 __pycache__/
 Deep-Graph-Unfolding-For-Beamforming.pdf
 Matrix-Inverse-Free_Deep_Unfolding_of_the_Weighted_MMSE_Beamforming_Algorithm.pdf
@@ -7,3 +15,5 @@ Matrix-Inverse-Free_Deep_Unfolding/
 aqua_jobs/
 scrip_test.cmd
 script.cmd
+unfolding.py
+rough.py
